--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "twitch": "^4.2.7"
   },
   "scripts": {
-    "start": "node bot.js"
+    "start": "ts-node bot.ts"
+  },
+  "devDependencies": {
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.5"
   }
 }
